Remove unused input components: DateRangePicker, Email, Password, and Search and add ci/cd github actions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Open Graph / Facebook / LinkedIn / Slack / Pinterest -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Meeting nanaman" />
-    <meta property="og:url" content="https://quick-chat.com/" />
+    <meta property="og:url" content="https://meeting-nanaman.aldrin-degracia.click/" />
     <meta
       property="og:title"
       content="Meeting nanaman! | Meet. Talk. Done."
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://quick-chat.com/meta-preview.png"
+      content="https://meeting-nanaman.aldrin-degracia.click/usap-lang.png"
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
@@ -37,7 +37,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://quick-chat.com/" />
+    <meta name="twitter:url" content="https://meeting-nanaman.aldrin-degracia.click/" />
     <meta
       name="twitter:title"
       content="Meeting nanaman! | Meet. Talk. Done."
@@ -48,7 +48,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://quick-chat.com/meta-preview.png"
+      content="https://meeting-nanaman.aldrin-degracia.click/usap-lang.png"
     />
 
     <!-- Pinterest -->
